# slothy

./: .db-bootstrap.sql  .env  .gitignore  Cargo.toml  README.md  slothy.ino
.github/workflows/: ci.yaml  credentials.h  rust.yml
backend/: .env
backend/migrations/: 00_bootstrap.sql
backend/src/: lib.rs  main.rs  router.rs  types.rs
backend/tests/: homepage.rs  water.rs
backend/tests/fixtures/: plants.sql
iot/: iot.ino
migrations/: 00_bootstrap.sql  0_plant.sql
src/: lib.rs  main.rs  router.rs  types.rs
tests/: plants.rs  water.rs
tests/common/: mod.rs
tests/fixtures/: plants.sql  water.sql
