[package]
name = "slothy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
chrono = "0.4.24"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.162", features = ["serde_derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls", "sqlite", "chrono", "offline"] }
